--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         &nbsp;&bull;&nbsp;
       {% endif %}
       {{ site.time | date: '%Y' }}
-	&nbsp;&bull;&nbsp; Fork Beautiful Jekyll
+	&nbsp;&bull;&nbsp; Powered by Jekyll
       {% if site.url-pretty %}
         &nbsp;&bull;&nbsp;
         <span class="author-site">
