[update] blogs update

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: page
 
 <div class="posts-list">
   
-  {% for post in site.posts %}
+  {% for post in site.posts reversed %}
 <!--    <p class="post-meta">-->
 <!--        Log all: Posted on {{ post.categories }} Page: {{ page.category }}-->
 <!--      </p>-->
